# whip

./: README.md  pyproject.toml
.claude/: gsd-file-manifest.json
.claude/skills/: python-anti-patterns  python-error-handling  python-project-structure  python-type-safety
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-core-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-browser-input-capture/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-macos-control-integration/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-coordinate-mapping/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md  verification-instructions.md
.planning/phases/05-setup-documentation/: 05-01-PLAN.md  05-01-SUMMARY.md  05-01-VERIFICATION.md
.planning/research/: SUMMARY.md  canvas-input.md  coordinate-mapping.md  fastapi-websocket.md  macos-input-control.md
src/whip/: __main__.py  controller.py  main.py  permissions.py  protocol.py  queue.py  repeat.py
static/: index.html
tests/: test_queue.py
