[project]
name = "whip"
version = "0.1.0"
description = "Web-based remote control for macOS - mouse and keyboard relay via browser"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.34.0",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.9.0",
    "pyright~=1.1.0",
]

[tool.ruff]
line-length = 120

[tool.pyright]
typeCheckingMode = "basic"
