[project]
name = "whip"
version = "0.1.0"
description = "WHIP: Web Host Interaction Platform - Web-based remote control for macOS"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.34.0",
    "pynput>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.9.0",
    "pyright~=1.1.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 120

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
